--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- /Banner -->
 
         <!-- Skillis -->
-        <div id="skillis" class="text-white mt-32 h-screen flex items-center justify-center">
+        <div id="skillis" class="text-white mt-32 h-screen flex items-center justify-center overflow-hidden">
             <div>
                 <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">
                     <div class="skillis_title inline-block"></div>
