--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             <span class="underline">Aloqa</span>
         </a>
     </nav> -->
-
     <div class="block relative w-full px-10 md:px-28 lg:px-28 xl:px-28 2xl:px-28">
         <!-- Banner -->
         <div id="banner" class="text-white h-screen flex items-center relative banner">
@@ -67,16 +66,10 @@
                 </a>
                 </span>
             </div>
-            <!-- <div class="flex-1">
-                <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Salom, dunyo</h2>
-                <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-20">
-                    Mening ismim <span class="name">Izzatbek</span>. Men php backend
-                    dasturchisiman.</h2>
-                <a href="#contact"
-                    class="btn border py-5 px-5 hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
-                    Men bilan bog'lanish</a>
-                </span>
-            </div> -->
+            <div class="flex-1 hidden lg:block xl:block 2xl:block flex justify-end">
+                <div class="block relative w-[37rem] robot">
+                </div>
+            </div>
             <div class="mous_scroll">
                 <div class="bottom-arrow-box">
                     <span class="scroll-btn" id="toSkillis">
